[FIX] web: adapt the form view to large screens
Prior to this commit, there was a spacing issue in large screens (eg. 4K
screen), the form view wasn't large enough and this created a big gap
between the form view and the chatter.

This commit adapts the form view to large screens.

task-3453381
Part of task-3326263

--- a/addons/mail/static/src/views/form/form_renderer.scss
+++ b/addons/mail/static/src/views/form/form_renderer.scss
@@ -8,12 +8,9 @@
     --ChatterTopbar-padding-right: #{$o-horizontal-padding};
 
     &.o-aside {
-        --Chatter-max-width: #{$o-form-view-sheet-max-width};
-
         flex-shrink: 0;
         flex-grow: 1;
         padding: map-get($spacers, 0);
-        max-width: var(--Chatter-max-width);
         width: $o-mail-Chatter-minWidth;
 
         .o-mail-Message.o-not-discussion {
